@@ -1,3 +1,7 @@
+2021-09-18 Danilo Chang
+
+	* Implement command: transform
+
 2021-09-17 Danilo Chang
 
 	* Implement command: kmeans
